--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -11,10 +11,19 @@
             color: white;
             font: normal 20pt Arial;
         }
+
+        h1 {
+            color: yellow;
+        }
     </style>
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <p>Já me livrei da maldição</p>  
+    <p>Já me livrei da maldição</p>
+    <script>
+        window.alert('Minha primeira mensagem') // Cria um alerta
+        window.confirm('Está gostando de JS?') // Janela com botão Ok e Cancel
+        window.prompt('Qual o seu nome?') // Vai perguntar o nome
+    </script> 
 </body>
 </html>
