--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -24,7 +24,7 @@
         var n1 = Number(window.prompt('Digite um número: '))
         var n2 = Number(window.prompt('Digite outro número: '))
         var s = n1 + n2
-        window.alert('A soma dos valores é ' + string(s))  //concatenação
+        window.alert(`A soma entre ${n1} e ${n2} é ${s}`)  //concatenação
         // (number + number) para adição
         // (string + string) para concatenação
     </script> 
