--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro programa...</title>
+    <title>Document</title>
     <style>
         body {
-            background-color: rgb(78, 78, 209);
-            color: white;
             font: normal 20pt Arial;
-        }
-
-        h1 {
-            color: yellow;
         }
     </style>
 </head>
 
 <body>
-    <h1>Olá, mundo!</h1>
-    <p>Já me livrei da maldição</p>
+
+
+
+
     <script>
-        window.prompt('Qual o seu nome?') // Vai perguntar o nome
+        var nome = window.prompt('Qual é seu nome?')
+        document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras. <br> `)
+        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()} <br>`)
+        document.write(`Seu nome em minúsculas é ${nome.toLowerCase()}. `)
     </script>
 </body>
 
