--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Números</title>
+    <style>
+        body {
+            font: normal 18pt Arial;
+        }
+        input {
+            font: normal 18pt Arial;
+        }
+        div#res {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando Valores</h1>
