--- a/aula12ex/ex014/modelo.html
+++ b/aula12ex/ex014/modelo.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="estilo.css">
     <title>Modelo de Exercício</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1 class="texto">Hora do dia</h1>
     </header>
     <section>
-        <div>
-            Testando...
+        <div id="msg" class="texto">
+            Aqui vai aparecer a mensagem...
         </div>
-        <div>
-            Olá
+        <div id="foto">
+            <img id="imagem" src="imagens/manha.png" alt="manhã">
         </div>
     </section>
     <footer>
-        <p>&copy;CursoemVideo</p>
+        <p class="texto">&copy;CursoemVideo</p>
     </footer>
     <script src="script.js"></script>
 </body>
