--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -14,26 +14,13 @@
         <h1>Tabuada</h1>
     </header>
     <section>
-        <form action="" id="formulario">
-            <label for="num">Número: </label>
-            <input type="number" name="num" id="num">
-            <input type="submit" value="Gerar Tabuada">
-        </form>
+        <label for="num">Número: </label>
+        <input type="number" name="num" id="txtn">
+        <input type="button" value="Gerar Tabuada" onclick="tabuada()">
 
-        <div id="res">
-            <select name="res" id="res" size="11">
-                <option value="digite">Digite um número acima</option>
-                <option value="1">
-                </option>
-                <option value="2"></option>
-                <option value="3"></option>
-                <option value="4"></option>
-                <option value="5"></option>
-                <option value="6"></option>
-                <option value="7"></option>
-                <option value="8"></option>
-                <option value="9"></option>
-                <option value="10"></option>
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
             </select>
         </div>
     </section>
