--- a/aula16ex/modelo.html
+++ b/aula16ex/modelo.html
@@ -22,6 +22,7 @@
             <select name="lista" id="listanum" size="10">
             </select><br>
             <input type="button" value="Finalizar" onclick="finalizar()">
+            <p id="resultados"></p>
         </div>
     </section>
     <footer>
